k8s/dicom-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dicom-model
spec:
  type: ClusterIP
  selector:
    app: dicom-model
  ports:
    - port: 80
      targetPort: 80
